Updated agent tests